Fixes lack of spacing around repeatable form.

--- a/tool-ui/src/main/webapp/style/v3/form.less
+++ b/tool-ui/src/main/webapp/style/v3/form.less
@@ -326,7 +326,6 @@
 
   background-color: white;
   clear: left;
-  margin-bottom: -10px;
   position: relative;
   z-index: 0;
 
